--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -10,7 +10,7 @@
 	 </context-param>
 	
 	<welcome-file-list>
-		<welcome-file>login.jsp</welcome-file>
+		<welcome-file>home.action</welcome-file>
 	</welcome-file-list>
 	
 	<filter>
